# polyflow

./: .gitignore  CMakeLists.txt  ISCC_Generator_code.txt  README.md  polyflow.hpp
src/: CMakeLists.txt  addToGridGen.hpp  addToGridGen.iscc.txt  main.cpp  pfutil.hpp  polyflow.hpp  simpleOpenReadCloseGen.cpp  simpleOpenReadCloseGen.hpp  simpleOpenReadCloseGen.iscc.txt  simpleWriteFileGen.hpp  simpleWriteFileGen.iscc.txt
